--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/morgan": "^1.9.9",
-    "typescript": "^5.7.3"
+    "eslint": "^9.27.0",
+    "globals": "^16.1.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
-    "@buxlo/common": "^1.0.55",
+    "@buxlo/common": "^1.0.90",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
-    "ts-node-dev": "^2.0.0"
+    "pg": "^8.16.0",
+    "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.24"
   }
 }
