--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
+    "stripe": "^18.4.0",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.24"
   }
