feat(payment): implement subscription and booking payment flows with Stripe integration
- Added use cases for booking and subscription checkout sessions
- Implemented payment fetching, webhook handling, and unit of work pattern
- Created new domain entities for booking, subscription payments, and availability
- Introduced repositories for booking, subscription payments, and unit of work with TypeORM
- Updated wallet use case, repository, and Kafka consumer for payment updates
- Added enums for payment status and subscription plan types
- Integrated Stripe service updates for subscription and booking flows
- Added new controllers and routes for booking, subscription checkout, and webhook handling
- Updated database connection and DI container configuration
- Removed deprecated checkout session flow
- Added zod DTOs for create checkout and fetch payment operations

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
-    "@buxlo/common": "^1.0.90",
+    "@buxlo/common": "^1.0.94",
+    "@grpc/grpc-js": "^1.13.4",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
