--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eslint/js": "^9.27.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^2.0.0",
     "eslint": "^9.27.0",
     "globals": "^16.1.0",
     "typescript": "^5.7.3",
@@ -22,10 +23,12 @@
     "@buxlo/common": "^1.0.99",
     "@grpc/grpc-js": "^1.13.4",
     "cookie-parser": "^1.4.7",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "pg": "^8.16.0",
     "stripe": "^18.4.0",
     "ts-node-dev": "^2.0.0",
